// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packages/paginator/routedPaginator renders correctly: End page 1`] = `
<PaginationItem
  className="page-item  disabled"
  tag="li"
>
  <li
    className="page-item  disabled page-item"
  >
    <PaginationLink
      aria-label="Next"
      className="page-link"
      href="#"
      onClick={[Function]}
      tag="a"
    >
      <a
        aria-label="Next"
        className="page-link page-link"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          Next
        </span>
        <span
          className="sr-only"
        >
          Next
        </span>
      </a>
    </PaginationLink>
  </li>
</PaginationItem>
`;

exports[`packages/paginator/routedPaginator renders correctly: Next page 1`] = `
<PaginationItem
  className="page-item disabled"
  tag="li"
>
  <li
    className="page-item disabled page-item"
  >
    <PaginationLink
      aria-label="End"
      className="page-link disabled"
      href="#"
      onClick={[Function]}
      tag="a"
    >
      <a
        aria-label="End"
        className="page-link disabled page-link"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          End
        </span>
        <span
          className="sr-only"
        >
          End
        </span>
      </a>
    </PaginationLink>
  </li>
</PaginationItem>
`;

exports[`packages/paginator/routedPaginator renders correctly: Start page 1`] = `
<PaginationItem
  className="page-item disabled"
  tag="li"
>
  <li
    className="page-item disabled page-item"
  >
    <PaginationLink
      aria-label="Start"
      className="page-link"
      href="#"
      onClick={[Function]}
      tag="a"
    >
      <a
        aria-label="Start"
        className="page-link page-link"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          Start
        </span>
        <span
          className="sr-only"
        >
          Start
        </span>
      </a>
    </PaginationLink>
  </li>
</PaginationItem>
`;

exports[`packages/paginator/routedPaginator renders correctly: previous page 1`] = `
<PaginationItem
  className="page-item disabled"
  tag="li"
>
  <li
    className="page-item disabled page-item"
  >
    <PaginationLink
      aria-label="Previous"
      className="page-link"
      href="#"
      onClick={[Function]}
      tag="a"
    >
      <a
        aria-label="Previous"
        className="page-link page-link"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          Previous
        </span>
        <span
          className="sr-only"
        >
          Previous
        </span>
      </a>
    </PaginationLink>
  </li>
</PaginationItem>
`;
